--- a/index.html
+++ b/index.html
@@ -157,8 +157,24 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-md-auto">
-                <div class="card" style="width: 225px;">
+              <div class="col-sm-3">
+                <div class="card">
+                  <img
+                    src="https://via.placeholder.com/20"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="card">
                   <img src="..." class="card-img-top" alt="..." />
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -169,8 +185,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-auto">
-                <div class="card" style="width: 225px;">
+              <div class="col-sm-3">
+                <div class="card">
                   <img src="..." class="card-img-top" alt="..." />
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -181,20 +197,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-auto">
-                <div class="card" style="width: 225px;">
-                  <img src="..." class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-auto">
-                <div class="card" style="width: 225px;">
+              <div class="col-sm-3">
+                <div class="card">
                   <img src="..." class="card-img-top" alt="..." />
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -217,6 +221,207 @@
           </div>
         </div>
       </section>
+    </div>
+    <div class="section-6">
+      <section id="">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <h4>
+                give us a good news
+              </h4>
+              <div class="row">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Name"
+                  id=""
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Email"
+                  id=""
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                  id=""
+                />
+              </div>
+              <div class="row">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Your message"
+                  id=""
+                />
+              </div>
+              <div class="row">
+                <button
+                  type="button"
+                  class="btn btn-primary-outline"
+                  id="button"
+                >
+                  SUBMIT
+                </button>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <h4>
+                our happy client
+              </h4>
+              <div class="container" id="clients">
+                <div class="row">
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img src="/design-assets/png/Zara_Logo.png" alt=""
+                    /></a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img
+                        src="/design-assets/png/Logo_of_Mango_(new).png"
+                        alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img
+                        src="/design-assets/png/1280px-Barneys_New_York_Logo.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img
+                        src="/design-assets/png/1280px-Gucci_Logo.png"
+                        alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img
+                        src="/design-assets/png/Calvin_klein_logo.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img src="/design-assets/png/1280px-Logo_NIKE.png" alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img src="/design-assets/png/Converse_logo.png" alt=""
+                    /></a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img src="/design-assets/png/Puma_Logo.png" alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img
+                        src="/design-assets/png/1280px-Levi's_logo.png"
+                        alt=""
+                    /></a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#"
+                      ><img src="/design-assets/png/Billabong.png" alt=""
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="section-7">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="row">
+            <a href=""><img src="/design-assets/png/logo.png" alt="" />tajam</a>
+          </div>
+          <div class="row">
+            <p>Text...</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="row">
+            <p><b>OUR STUDIO</b></p>
+          </div>
+          <div class="row">
+            <div class="col-auto">
+              <a href=""><img src="/design-assets/png/big104.png" alt=""></a>
+          </div>
+          <div class="col-auto">
+            <p>Address...</p>
+        </div>
+        </div>
+          <div class="row">
+            <div class="col-auto">
+              <a href=""><img src="/design-assets/png/phone351.png" alt=""></a>
+          </div>
+          <div class="col-auto">
+            <p>Number...</p>
+        </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="row">
+          <p><b>STAY IN TOUCH</b></p>
+        </div>
+        <div class="row">
+          <div class="col-auto">
+            <input
+            type="text"
+            class="form-control"
+            placeholder="Subscribe our newsletter"
+            id=""
+          />
+        </div>
+        <div class="col-auto">
+          <a href=""><img src="/design-assets/png/paper122.png" alt=""></a>
+      </div>
+      </div>
+        <div class="row">
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/facebook.png" alt=""></a>
+      </div>
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/twitter.png" alt=""></a>
+      </div>
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/dribble.png" alt=""></a>
+      </div>
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/instagram.png" alt=""></a>
+      </div>
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/gplus.png" alt=""></a>
+      </div>
+        <div class="col-sm-1">
+          <a href=""><img src="/design-assets/png/youtube.png" alt=""></a>
+      </div>
+      </div>
+    </div>
     </div>
   </body>
 </html>
